# ecs

./: CMakeLists.txt  README.md
include/ecs/: archetype.hpp  column.hpp  ecs.hpp  entity.hpp  entity_handle.hpp  fwd.hpp  signature.hpp  system.hpp  type_id.hpp  view.hpp  world.hpp
include/ecs/detail/: entity.inl  system.inl  view.inl  world.inl
src/: archetype.cpp  bench.cpp  column.cpp  entity.cpp  entity_handle.cpp  signature.cpp  world.cpp
tests/: CMakeLists.txt  test.cpp
